--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,6 @@
     "deploy": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test"
-   
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
